@@ -84,8 +84,12 @@
     <apacheds.version>2.0.0-M19</apacheds.version>
     <surefire.version>3.0.0</surefire.version>
     <graalapi.version>22.0.0.2</graalapi.version>
+    <error-prone.version>2.3.4</error-prone.version>
+    <api-plumber-doclet.version>1.0.0</api-plumber-doclet.version>
     <skipTests>false</skipTests>
     <skipUnitTests>${skipTests}</skipUnitTests>
+    <!-- For custom `leaks-private-api` tag (apparently dash separators are not handled correctly) -->
+    <javadoc-leak-tag>leaks</javadoc-leak-tag>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -585,37 +589,6 @@
     </pluginManagement>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerId>javac-with-errorprone</compilerId>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerArgs combine.children="override">
-            <compilerArg>-Xep:FutureReturnValueIgnored:OFF</compilerArg>
-            <compilerArg>-Xep:PreferJavaTimeOverload:OFF</compilerArg>
-            <compilerArg>-Xep:AnnotateFormatMethod:OFF</compilerArg>
-            <compilerArg>-Xep:WildcardImport:WARN</compilerArg>
-            <compilerArg>-XepExcludedPaths:.*/target/(?:generated-sources|generated-test-sources)/.*</compilerArg>
-          </compilerArgs>
-          <showWarnings>true</showWarnings>
-          <failOnWarning>true</failOnWarning>
-          <useIncrementalCompilation>false</useIncrementalCompilation>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-compiler-javac-errorprone</artifactId>
-            <version>2.8.6</version>
-          </dependency>
-          <dependency>
-            <groupId>com.google.errorprone</groupId>
-            <artifactId>error_prone_core</artifactId>
-            <version>2.3.4</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
         <groupId>com.coveo</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
         <executions>
@@ -769,12 +742,8 @@ limitations under the License.]]></inlineHeader>
               <placement>a</placement>
               <head>API note:</head>
             </tag>
-            <!--
-              For custom `leaks-private-api` tag (apparently dash separators are not handled
-              correctly)
-            -->
             <tag>
-              <name>leaks</name>
+              <name>${javadoc-leak-tag}</name>
               <placement>X</placement>
             </tag>
           </tags>
@@ -814,12 +783,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <docletArtifact>
                 <groupId>com.datastax.oss</groupId>
                 <artifactId>api-plumber-doclet</artifactId>
-                <version>1.0.0</version>
+                <version>${api-plumber-doclet.version}</version>
               </docletArtifact>
               <additionalJOptions>
                 <!-- API types do not leak internal types -->
                 <additionalparam>-preventleak</additionalparam>
                 <additionalparam>com.datastax.oss.driver.internal</additionalparam>
+                <additionalparam>-preventleak</additionalparam>
                 <additionalparam>com.datastax.dse.driver.internal</additionalparam>
                 <!-- Shaded dependencies (Guava, Netty, etc.) -->
                 <additionalparam>-preventleak</additionalparam>
@@ -946,56 +916,98 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <revapi.skip>true</revapi.skip>
       </properties>
     </profile>
-    <!-- Use $JAVA_HOME as the default JDK to run surefire/failsafe to maintain portability -->
     <profile>
-      <id>test-jdk-environment</id>
+      <id>build-java-8</id>
       <activation>
-        <property>
-          <name>!testJavaHome</name>
-        </property>
+        <jdk>[,8)</jdk>
       </activation>
-      <properties>
-        <testing.jvm>${env.JAVA_HOME}</testing.jvm>
-      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <compilerId>javac-with-errorprone</compilerId>
+              <forceJavacCompilerUse>true</forceJavacCompilerUse>
+              <source>1.8</source>
+              <target>1.8</target>
+              <compilerArgs combine.children="override">
+                <compilerArg>-Xep:FutureReturnValueIgnored:OFF</compilerArg>
+                <compilerArg>-Xep:PreferJavaTimeOverload:OFF</compilerArg>
+                <compilerArg>-Xep:AnnotateFormatMethod:OFF</compilerArg>
+                <compilerArg>-Xep:WildcardImport:WARN</compilerArg>
+                <compilerArg>-XepExcludedPaths:.*/target/(?:generated-sources|generated-test-sources)/.*</compilerArg>
+              </compilerArgs>
+              <showWarnings>true</showWarnings>
+              <failOnWarning>true</failOnWarning>
+              <useIncrementalCompilation>false</useIncrementalCompilation>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                <version>2.8.6</version>
+              </dependency>
+              <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_core</artifactId>
+                <version>2.3.4</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
-    <!-- set -DtestJavaHome=/path/to/jdk/home to use a different JDK for surefire/failsafe -->
     <profile>
-      <id>test-jdk-specified</id>
-      <activation>
-        <property>
-          <name>testJavaHome</name>
-        </property>
-      </activation>
-      <properties>
-        <testing.jvm>${testJavaHome}</testing.jvm>
-      </properties>
-    </profile>
-    <profile>
-      <!-- workarounds for running tests with JDK1.8 -->
-      <id>test-jdk-8</id>
-      <activation>
-        <jdk>[8,)</jdk>
-      </activation>
-    </profile>
-    <profile>
-      <!-- workarounds for running tests with JDK11 -->
-      <id>test-jdk-11</id>
+      <id>build-java-11</id>
       <activation>
         <jdk>[11,)</jdk>
       </activation>
-    </profile>
-    <profile>
-      <!-- workarounds for running tests with JDK17 -->
-      <id>test-jdk-17</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
       <properties>
+        <error-prone.version>2.19.1</error-prone.version>
+        <api-plumber-doclet.version>2.0.0</api-plumber-doclet.version>
+        <javadoc-leak-tag>leaks-private-api</javadoc-leak-tag>
         <!-- for DriverBlockHoundIntegrationIT when using JDK 13+, see https://github.com/reactor/BlockHound/issues/33 -->
         <blockhound.argline>-XX:+AllowRedefinitionToAddDeleteMethods</blockhound.argline>
         <!-- allow deep reflection for mockito when using JDK 17+, see https://stackoverflow.com/questions/70993863/mockito-can-not-mock-random-in-java-17 -->
         <mockitoopens.argline>--add-opens java.base/jdk.internal.util.random=ALL-UNNAMED</mockitoopens.argline>
       </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <forceJavacCompilerUse>true</forceJavacCompilerUse>
+              <release>8</release>
+              <encoding>UTF-8</encoding>
+              <compilerArgs combine.children="override">
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-XDcompilePolicy=simple</arg>
+                <arg>-Xplugin:ErrorProne -Xep:FutureReturnValueIgnored:OFF -Xep:PreferJavaTimeOverload:OFF -Xep:AnnotateFormatMethod:OFF -Xep:MissingSummary:OFF -Xep:InvalidBlockTag:OFF -Xep:OptionalMapUnusedValue:OFF -Xep:ReturnValueIgnored:OFF -Xep:BanJNDI:OFF -Xep:InlineMeSuggester:OFF -Xep:StringSplitter:OFF -Xep:JavaUtilDate:OFF -Xep:ObjectEqualsForPrimitives:OFF -Xep:EmptyCatch:OFF -Xep:ProtectedMembersInFinalClass:OFF -Xep:StringCaseLocaleUsage:OFF -Xep:MutablePublicArray:OFF -Xep:DirectInvocationOnMock:OFF -Xep:MockNotUsedInProduction:OFF -Xep:LongDoubleConversion:OFF -Xep:EmptyBlockTag:OFF -Xep:AlmostJavadoc:OFF -Xep:DoNotClaimAnnotations:OFF -Xep:BadImport:OFF -Xep:DefaultCharset:OFF -Xep:UseCorrectAssertInTests:OFF -Xep:NarrowCalculation:OFF -Xep:WildcardImport:WARN -XepExcludedPaths:.*/target/(?:generated-sources|generated-test-sources)/.*</arg>
+              </compilerArgs>
+              <annotationProcessorPaths combine.children="append">
+                <path>
+                  <groupId>com.google.errorprone</groupId>
+                  <artifactId>error_prone_core</artifactId>
+                  <version>${error-prone.version}</version>
+                </path>
+              </annotationProcessorPaths>
+              <showWarnings>true</showWarnings>
+              <failOnWarning>true</failOnWarning>
+              <useIncrementalCompilation>false</useIncrementalCompilation>
+              <fork>true</fork>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
   <distributionManagement>
